hphp/hack/test/typecheck/dynamic/coercion/awaitable_non_async.php.exp
File "awaitable_non_async.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
File "awaitable_non_async.php", line 4, characters 42-48:
This is a dynamic value
File "awaitable_non_async.php", line 4, characters 22-24:
It is incompatible with an int
