hphp/hack/test/typecheck/dynamic/coercion/awaitable_non_async.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function f(Awaitable<int> $i): Awaitable<dynamic> {
  return $i;
}
